  Ltac (`auto` still does not respect it).

- Tactic `constr_eq` now adds universe constraints needed for the
  identity to the context (it used to ignore them). New tactic
  `constr_eq_strict` checks that the required constraints already hold
  without adding new ones. Preexisting tactic `constr_eq_nounivs` can
  still be used if you really want to ignore universe constraints.

Tools

- Coq_makefile lets one override or extend the following variables from
  the command line: COQFLAGS, COQCHKFLAGS, COQDOCFLAGS.
  COQFLAGS is now entirely separate from COQLIBS, so in custom Makefiles
  $(COQFLAGS) should be replaced by $(COQFLAGS) $(COQLIBS).

- Removed the gallina utility (extracts specification from Coq vernacular files).
  If you would like to maintain this tool externally, please contact us.

- Removed the Emacs modes distributed with Coq. You are advised to
  use Proof-General <https://proofgeneral.github.io/> (and optionally
  Company-Coq <https://github.com/cpitclaudel/company-coq>) instead.
  If your use case is not covered by these alternative Emacs modes,
  please open an issue. We can help set up external maintenance as part
  of Proof-General, or independently as part of coq-community.

Vernacular Commands

- Removed deprecated commands Arguments Scope and Implicit Arguments
  (not the option). Use the Arguments command instead.
- Nested proofs may be enabled through the option `Nested Proofs Allowed`.
  By default, they are disabled and produce an error. The deprecation
  warning which used to occur when using nested proofs has been removed.
- Added option Uniform Inductive Parameters which abstracts over parameters
  before typechecking constructors, allowing to write for example
  `Inductive list (A : Type) := nil : list | cons : A -> list -> list.`
- New Set Hint Variables/Constants Opaque/Transparent commands for setting
  globally the opacity flag of variables and constants in hint databases,
  overwritting the opacity set of the hint database.